se agregan arreglos

--- a/index.html
+++ b/index.html
@@ -184,7 +184,67 @@
                     <h2 class="seccion__text-top-title">Our Technological IT Solutions For The Future Of Business</h2>
                     <p class="seccion__text-top-text-p">Let your workload lighten with our best digital solutions.</p>
                 </div>
-                <a href="#" class="seccion__text-top-link">All Services</a>
+                <a href="#" class="seccion__text-top-link">All Projects</a>
+            </div>
+            <div class="seccion__carrusel">
+                <div class="seccion__images">
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
