se realizan arreglos y cambios en css

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="seccion__part-2-buttons">
-                    <a href="#" class="seccion__part-2-button-link">Get To Know US<i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="#" class="seccion__part-2-button-link">Get To Know US<i class="fa-solid fa-arrow-right seccion__part-2-button-link-i"></i></a>
                 </div>
             </div>
         </div>
@@ -245,6 +245,171 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="seccion__four">
+            <div class="seccion__text-top">
+                <div class="seccion__text-top-text">
+                    <h2 class="seccion__text-top-title">Our Technological IT Solutions For The Future Of Business</h2>
+                    <p class="seccion__text-top-text-p">Let your workload lighten with our best digital solutions.</p>
+                </div>
+                <a href="#" class="seccion__text-top-link">All Projects</a>
+            </div>
+            <div class="seccion__carrusel">
+                <div class="seccion__images">
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                    <div class="seccion__images-img">
+                        <div class="seccion__images-info">
+                            <p class="seccion__images-icon"><i class="fa-solid fa-computer"></i></p>
+                            <h4 class="seccion__images-h4">IT Management</h4>
+                            <a href="#" class="seccion__images-button">Review<i class="fa-solid fa-arrow-right seccion__images-arrow"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="seccion__five">
+            <div class="seccion__five-title">
+                <h2 class="seccion__five-h2">The Most Beautiful Dreams Are White</h2>
+                <p class="seccion__five-subtitle">We are confident that we will open white nets for your company.</p>
+            </div>
+            <div class="seccion__five-body">
+                <div class="seccion__five-cards">
+                    <img src="./img/perfil-1.jpg" alt="perfil-1" class="seccion__five-cards-img">
+                    <div class="seccion__five-cards-text">
+                        <h2 class="seccion__five-cards-h2">Robert North</h2>
+                        <p class="seccion__five-cards-p">Co Founder</p>
+                    </div>
+                    <div class="seccion__five-cards-socials">
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="seccion__five-cards">
+                    <img src="./img/perfil-3.jfif" alt="perfil-1" class="seccion__five-cards-img">
+                    <div class="seccion__five-cards-text">
+                        <h2 class="seccion__five-cards-h2">Adam Brown</h2>
+                        <p class="seccion__five-cards-p">General Manager</p>
+                    </div>
+                    <div class="seccion__five-cards-socials">
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="seccion__five-cards">
+                    <img src="./img/perfil-2.png" alt="perfil-1" class="seccion__five-cards-img">
+                    <div class="seccion__five-cards-text">
+                        <h2 class="seccion__five-cards-h2">Mark Nawaqanitawase</h2>
+                        <p class="seccion__five-cards-p">Web Developer</p>
+                    </div>
+                    <div class="seccion__five-cards-socials">
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="seccion__five-cards">
+                    <img src="./img/perfil-4.jfif" alt="perfil-1" class="seccion__five-cards-img">
+                    <div class="seccion__five-cards-text">
+                        <h2 class="seccion__five-cards-h2">Faf De Klerk</h2>
+                        <p class="seccion__five-cards-p">Web Designer</p>
+                    </div>
+                    <div class="seccion__five-cards-socials">
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#" class="seccion__five-cards-social"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="seccion__six">
+            <div class="seccion__six-top">
+                <h2 class="seccion__six-h2">25+ Years Of Technological Competence</h2>
+                <p class="seccion__six-subtitle">You are the biggest factor in strengthening your corporate identity.</p>
+            </div>
+            <div class="seccion__six-middle">
+                <div class="seccion__six-middle-card">
+                    <h2 class="seccion__six-middle-card-h4">25</h2>
+                    <h4 class="seccion__six-middle-card-p">Years Of Experience</h4>
+                    <p class="seccion__six-middle-card-text">We have been working day and night for 40 years.</p>
+                </div>
+                <div class="seccion__six-middle-card">
+                    <h2 class="seccion__six-middle-card-h4">26782</h2>
+                    <h4 class="seccion__six-middle-card-p">Happy Clients</h4>
+                    <p class="seccion__six-middle-card-text">It is you, our valued customers, that make us who we are</p>
+                </div>
+                <div class="seccion__six-middle-card">
+                    <h2 class="seccion__six-middle-card-h4">98268</h2>
+                    <h4 class="seccion__six-middle-card-p">Finished Projects</h4>
+                    <p class="seccion__six-middle-card-text">We accelerate your business processes with digital networks.</p>
+                </div>
+                <div class="seccion__six-middle-card">
+                    <h2 class="seccion__six-middle-card-h4">684</h2>
+                    <h4 class="seccion__six-middle-card-p">Our Awards</h4>
+                    <p class="seccion__six-middle-card-text">We are proud of our global technological awards.</p>
+                </div>
+            </div>
+            <div class="seccion__six-botton">
+                <img src="./img/cli-1.jpg" alt="" class="seccion__six-botton-img">
+                <img src="./img/cli-2.jpg" alt="" class="seccion__six-botton-img">
+                <img src="./img/cli-3.jpg" alt="" class="seccion__six-botton-img">
+                <img src="./img/cli-4.jpg" alt="" class="seccion__six-botton-img">
+                <img src="./img/cli-5.jpg" alt="" class="seccion__six-botton-img">
+                <img src="./img/cli-6.jpg" alt="" class="seccion__six-botton-img">
             </div>
         </div>
     </main>
