subidad de footer

--- a/index.html
+++ b/index.html
@@ -412,9 +412,129 @@
                 <img src="./img/cli-6.jpg" alt="" class="seccion__six-botton-img">
             </div>
         </div>
+        <div class="seccion__seven">
+            <div class="seccion__seven-top">
+                <div class="seccion__seven-ckecks">
+                    <p class="seccion__seven-pulgar"><i class="fa-regular fa-thumbs-up"></i></p>
+                </div>
+                <div class="seccion__seven-titles">
+                    <h2 class="seccion__seven-h2">What Are Our Customers Saying ?</h2>
+                    <p class="seccion__seven-subtitle">Opinions from our happy customers.</p>
+                </div>
+            </div>
+            <div class="seccion__seven-middler">
+                <div class="seccion__seven-middler-carrusel">
+                    <div class="seccion__seven-middler-carrusel-cards">
+                        <div class="seccion__seven-middler-carrusel-card">
+                            <p class="seccion__seven-middler-carrusel-p">We needed IT services for our company. They did a super job. A friendly and professional team. Thank you for everything</p>
+                            <p class="seccion__seven-middler-carrusel-nombre">Robert</p>
+                        </div>
+                    </div>
+                    <div class="seccion__seven-middler-carrusel-cards">
+                        <div class="seccion__seven-middler-carrusel-card">
+                            <p class="seccion__seven-middler-carrusel-p">We needed IT services for our company. They did a super job. A friendly and professional team. Thank you for everything</p>
+                            <p class="seccion__seven-middler-carrusel-nombre">Robert</p>
+                        </div>
+                    </div>
+                    <div class="seccion__seven-middler-carrusel-cards">
+                        <div class="seccion__seven-middler-carrusel-card">
+                            <p class="seccion__seven-middler-carrusel-p">We needed IT services for our company. They did a super job. A friendly and professional team. Thank you for everything</p>
+                            <p class="seccion__seven-middler-carrusel-nombre">Robert</p>
+                        </div>
+                    </div>
+                    <div class="seccion__seven-middler-carrusel-cards">
+                        <div class="seccion__seven-middler-carrusel-card">
+                            <p class="seccion__seven-middler-carrusel-p">We needed IT services for our company. They did a super job. A friendly and professional team. Thank you for everything</p>
+                            <p class="seccion__seven-middler-carrusel-nombre">Robert</p>
+                        </div>
+                    </div>
+                    <div class="seccion__seven-middler-carrusel-cards">
+                        <div class="seccion__seven-middler-carrusel-card">
+                            <p class="seccion__seven-middler-carrusel-p">We needed IT services for our company. They did a super job. A friendly and professional team. Thank you for everything</p>
+                            <p class="seccion__seven-middler-carrusel-nombre">Robert</p>
+                        </div>
+                    </div>
+                    <div class="seccion__seven-middler-carrusel-cards">
+                        <div class="seccion__seven-middler-carrusel-card">
+                            <p class="seccion__seven-middler-carrusel-p">We needed IT services for our company. They did a super job. A friendly and professional team. Thank you for everything</p>
+                            <p class="seccion__seven-middler-carrusel-nombre">Robert</p>
+                        </div>
+                    </div>
+                    <div class="seccion__seven-middler-carrusel-cards">
+                        <div class="seccion__seven-middler-carrusel-card">
+                            <p class="seccion__seven-middler-carrusel-p">We needed IT services for our company. They did a super job. A friendly and professional team. Thank you for everything</p>
+                            <p class="seccion__seven-middler-carrusel-nombre">Robert</p>
+                        </div>
+                    </div>
+                    <div class="seccion__seven-middler-carrusel-cards">
+                        <div class="seccion__seven-middler-carrusel-card">
+                            <p class="seccion__seven-middler-carrusel-p">We needed IT services for our company. They did a super job. A friendly and professional team. Thank you for everything</p>
+                            <p class="seccion__seven-middler-carrusel-nombre">Robert</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="./img/comment-people-1.png" alt="" class="seccion__seven-animation seccion__seven-animation--position-1">
+            <img src="./img/comment-people-2.png" alt="" class="seccion__seven-animation seccion__seven-animation--position-2">
+            <img src="./img/comment-people-4.png" alt="" class="seccion__seven-animation seccion__seven-animation--position-3">
+            <img src="./img/comment-people-5.png" alt="" class="seccion__seven-animation seccion__seven-animation--position-4">
+        </div>
     </main>
-    <footer class="footer">
-
+    <footer class="seccion__eight">
+        <div class="seccion__eight-start">
+            <div class="seccion__eight-start-img">
+                <img src="./img/technit-white-logo.png" alt="logo white" class="seccion__eight-start-logo">
+            </div>
+            <div class="seccion__eight-start-title">
+                <p class="seccion__eight-start-p">Reliable networks with our sharp, understanding and professional team.</p>
+            </div>
+            <div class="seccion__eight-start-social">
+                <a href="#" class="seccion__eight-start-social-item"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#" class="seccion__eight-start-social-item"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" class="seccion__eight-start-social-item"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+        </div>
+        <div class="seccion__eight-center">
+            <div class="seccion__eight-text">
+                <h2 class="seccion__eight-text-h2">We Offer IT Solutions With New Generation Technologies</h2>
+                <p class="seccion__eight-text-p">We are progressing day by day in line with our goal of becoming one of theleading IT companies. While we manage to attract the attention of our customers thanks to the solutions weoffer, we continue to gain their trust with the projects we deliver. Our company, which has adopted theprinciple of 100% customer satisfaction, offers our customers end-to-end services tailored to their needs.</p>
+                <a href="#" class="seccion__eight-text-a">Contact Us<i class="fa-solid fa-arrow-right seccion__eight-text-i--left"></i></a>
+            </div>
+        </div>
+        <div class="seccion__eight-end">
+            <div class="seccion__eight-end-card">
+                <div class="seccion__eight-end-card-img">
+                    <p class="seccion__eight-end-card-logo"><i class="fa-solid fa-headphones"></i></p>
+                </div>
+                <div class="seccion__eight-end-card-text">
+                    <p class="seccion__eight-end-card-p">Customer Service</p>
+                    <p class="seccion__eight-end-card-numbers">+ 123 456 78 90 01</p>
+                </div>
+            </div>
+            <div class="seccion__eight-end-card">
+                <div class="seccion__eight-end-card-img">
+                    <p class="seccion__eight-end-card-logo"><i class="fa-solid fa-envelope"></i></p>
+                </div>
+                <div class="seccion__eight-end-card-text">
+                    <p class="seccion__eight-end-card-p">Information and Complaint</p>
+                    <p class="seccion__eight-end-card-numbers">example@example.com</p>
+                </div>
+            </div>
+            <div class="seccion__eight-end-card">
+                <div class="seccion__eight-end-card-img">
+                    <p class="seccion__eight-end-card-logo"><i class="fa-solid fa-location-dot"></i></p>
+                </div>
+                <div class="seccion__eight-end-card-text">
+                    <p class="seccion__eight-end-card-p">Visit Us</p>
+                    <p class="seccion__eight-end-card-numbers">New Jersey, USA</p>
+                </div>
+            </div>
+        </div>
+        <div class="seccion__eight-bottom">
+            <div class="seccion__eight-bottom-line"></div>
+            <p class="seccion__eight-bottom-footer">© 2023 Technit - All Rights Reserved.</p>
+            <div class="seccion__eight-bottom-line seccion__eight-bottom-line--left"></div>
+        </div>
     </footer>
     <script src="./main.js"></script>
 </body>
